add multiplication to Calculator