@@ -3,7 +3,7 @@ package calculator;
 import java.util.*;
 
 public class Calculator {
-    private List<Integer> numbers = new LinkedList<>();
+    private final List<Integer> numbers = new LinkedList<>();
 
     public void enter(int i){
         numbers.add(i);
@@ -24,6 +24,14 @@ public class Calculator {
         if (numbers.size() != 1){
             throw new IllegalStateException();
         }
-        return numbers.get(0);
+        return numbers.getFirst();
+    }
+
+    public void mul() {
+        if (numbers.size() != 2){
+            throw new IllegalStateException();
+        }
+        numbers.set(0, numbers.get(0) * numbers.get(1));
+        numbers.remove(1);
     }
 }
